--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -157,10 +157,10 @@
           こんにちは！
 
     .footer
-      %form{:action => '/', :class => 'new-message'}
+      %form{action: '/', class: 'new-message'}
         .input-box
-          %input{:type => 'text', :class => 'input-box__text', :placeholder => 'type a message'}
-          %label{:class => 'input-box__image'}
+          %input{type: 'text', class: 'input-box__text', placeholder: 'type a message'}
+          %label{class: 'input-box__image'}
             = fa_icon 'image'
-            %input{:type => 'file', :class => 'input-box__image__file'}
-        %input{:type => 'submit', :class => 'submit-btn', :value => 'Send'}
+            %input{type: 'file', class: 'input-box__image__file'}
+        %input{type: 'submit', class: 'submit-btn', value: 'Send'}
