convert to link_to

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -95,7 +95,7 @@
           member1,
           member2,
           member3
-      %a(href="")
+      = link_to '' do
         .header__btn--edit-group
           Edit
     .contents
