--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
-@import "./reset";
-@import "./variable";
-@import "./index";
 @import "font-awesome";
+@import "./configs/reset";
+@import "./configs/variable";
+@import "modules/user.scss";
+@import "./index";
