--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,18 +1,16 @@
-.flash-box
-  グループを作成しました。
 .wrapper
   .chat-side
     .left-header
       .left-header__box
         .left-header__box--myname
-          test-user
+          = current_user.name
         %ul.left-header__box__menu
           %li.left-header__box__menu--new-group
-            = link_to "" do
-              = fa_icon 'edit'
+            = link_to  do
+              = fa_icon 'edit', class: 'icon'
           %li.left-header__box__menu--edit-user
-            = link_to "" do
-              = fa_icon 'cog'
+            = link_to edit_user_path(current_user) do
+              = fa_icon 'cog', class: 'icon'
     .left-contents
       .left-contents__btn
         .left-contents__btn--group-name
