--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,6 @@
 @import "./configs/variable";
 @import "modules/user.scss";
 @import "./modules/flash";
-@import "./modules/index";
+@import "./modules/chat-main";
+@import "./modules/chat-side";
 @import "./modules/group";
