--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -17,55 +17,6 @@ a {
 
 .wrapper {
   display: flex;
-  .chat-side {
-    background-color: #2f3e51;
-    width: 300px;
-    color: #ffffff;
-    & a {
-      color: white;
-    }
-    .left-header {
-      background-color: #253141;
-      height: 100px;
-      padding: 0 20px;
-      display: flex;
-      align-items: center;
-      &__box {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        &--myname {
-          @include font-style(16px, bold);
-        }
-        &__menu {
-          display: flex;
-          & li {
-            margin-left: 0.3rem;
-          }
-          &--new-group {
-          }
-          &--edit-user {
-          }
-        }
-      }
-    }
-    .left-contents {
-      height: calc(100vh - 100px);
-      &__btn {
-        padding: 0 20px;
-        font-weight: bold;
-        &--group-name {
-          @include font-style(15px, bold);
-          padding-top: 20px;
-        }
-        &--last-message {
-          @include font-style(11px, bold);
-          padding: 5px 0 20px;
-        }
-      }
-    }
-  }
-  
   .chat-main {
     width: calc(100vw - 300px);
     .header {
@@ -78,12 +29,13 @@ a {
         &--group-name {
           color: #333333;
           font-size: 20px;
-          margin: 35px 0 15px;
+          margin-top: 35px;
         }
         &--members {
-          color: #999999;
+          color: $light_gray;
           font-size: 12px;
           white-space: nowrap;
+          margin-bottom: 15px;
         }
       }
       & a {
@@ -99,26 +51,28 @@ a {
         right: 40px;
       }
     }
+
     .contents {
       background-color: #fafafa;
       height: calc(100vh - 190px);
       padding: 46px 40px;
       overflow: scroll;
       .content {
-        color: #434A54;
         &__upper-info{
           display: flex;
           margin-bottom: 10px;
           &--user-name {
+            color: $black;
             @include font-style(16px, bold);
           }
           &--date {
             margin-left: 10px;
             font-size: 12px;
-            color: #999999;
+            color: $light_gray;
           }
         }
         &--body {
+          color: $black;
           margin-bottom: 40px;
           font-size: 14px;
         }
@@ -156,8 +110,6 @@ a {
           margin-left: 15px;
           padding: 0 30px;
           width: 100px;
-          text-align: center;
-          line-height: 50px;
           font-size: 16px;
         }
       }
