--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -70,10 +70,10 @@
           こんにちは！
 
     .footer
-      %form{action: '/', class: 'new-message'}
+      = form_for [@group, @message] do |f|
         .input-box
-          %input{type: 'text', class: 'input-box__text', placeholder: 'type a message'}
-          %label{class: 'input-box__image'}
-            = fa_icon 'image'
-            %input{type: 'file', class: 'input-box__image__file'}
-        %input{type: 'submit', class: 'submit-btn', value: 'Send'}
+          = f.text_field :body, class: 'input-box__text', placeholder: 'type a message'
+          = f.label :image, class: 'input-box__image' do
+            = fa_icon 'image', class: 'icon'
+            = f.file_field :image, class: 'input-box__image__file'
+        = f.submit 'Send', class: 'submit-btn'
