modified view to display messages

--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -14,10 +14,10 @@ a {
   color: white;
   text-align: center;
 }
-// .alert {
-//   background-color: $alert_orange; 
-//   text-align: center;
-// }
+.alert {
+  background-color: $alert_orange; 
+  text-align: center;
+}
 
 .wrapper {
   display: flex;
