--- a/app/views/shared/_chat-side.html.haml
+++ b/app/views/shared/_chat-side.html.haml
@@ -17,4 +17,4 @@
           .left-contents__btn--group-name
             = group.name
           .left-contents__btn--last-message
-            メッセージがまだありません。
+            = group.show_last_message
