--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -39,7 +39,7 @@ a {
           color: $light_gray;
           font-size: 12px;
           white-space: nowrap;
-          margin-bottom: 15px;
+          margin-top: 15px;
         }
       }
       & a {
