--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -5,6 +5,8 @@
     .content__upper-info--date
       = message.created_at.strftime("%Y/%m/%d(%a) %X")
   .content--body
-    = message.body if message.body.present?
+    -if message.body.present?
+      %p.message__text
+        = message.body 
     - if message.image.present?
       = image_tag message.image.url
