--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -27,11 +27,11 @@
       #chat-group-users
         #chat-group-user.chat-group-user.clearfix
           %input{name: "group[user_ids][]", type: "hidden", value: "#{current_user.id}"}/
-          %p.chat-group-user__name #{current_user.name}
+          %p.chat-group-user__name.add_member{data: {user: {id: current_user.id}}} #{current_user.name}
         - @group.users.where.not(id:current_user.id).each do |user|
           #chat-group-user.chat-group-user.clearfix
             %input{name: "group[user_ids][]", type: "hidden", value: "#{user.id}"}/
-            %p.chat-group-user__name #{user.name}
+            %p.chat-group-user__name.add_member{data: {user: {id: user.id}}} #{user.name}
             .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
 
   .chat-group-form__field.clearfix
